--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -78,6 +78,9 @@
   flex-wrap: wrap;
   max-width: 800px;
   margin-top: 3rem;
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0;
 }
 
 .card {
@@ -90,6 +93,10 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
+}
+
+.card img {
+  border-radius: 10px;
 }
 
 .card:hover,
@@ -118,5 +125,23 @@
   .grid {
     width: 100%;
     flex-direction: column;
+  }
+}
+.search {
+  text-align: center;
+}
+.search input {
+  margin-right: 0.5em;
+}
+
+@media (max-width: 600px) {
+  .search input {
+    margin-right: 0;
+    margin-bottom: 0.5em;
+  }
+
+  .search-input,
+  .search button {
+    width: 100%;
   }
 }
